Fixed code-block and Navgroup overlap due to z-index unset values

--- a/src/assets/sass/base/_reset.scss
+++ b/src/assets/sass/base/_reset.scss
@@ -47,3 +47,9 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+header {
+	z-index: 2;
+}
+main {
+	z-index: 1;
+}
